--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>Houspital</title>
+    <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -16,7 +16,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <!--script src="cordova.js"></script-->
+    <script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -24,7 +24,9 @@
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-    <script src="js/angular-cookies.js"></script>
+    
+        <script src="js/angular-cookies.js"></script>
     <script src="js/controllers.js"></script>
+
   </body>
 </html>
