--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
+    <!-- for flash messages -->
+    <link rel="stylesheet" href="flash/angular-flash.css" type="text/css">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -17,6 +18,8 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!-- for flash messages -->
+    <script src="flash/angular-flash.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
@@ -25,7 +28,7 @@
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
     
-        <script src="js/angular-cookies.js"></script>
+    <script src="js/angular-cookies.js"></script>
     <script src="js/controllers.js"></script>
 
   </body>
