--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-    
+    <script src="js/moment.js"></script>
+    <script src="js/angular-moment.min.js"></script>
     <script src="js/angular-cookies.js"></script>
     <script src="js/controllers.js"></script>
 
