Push notification changes.

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
     <script src="js/angular-moment.min.js"></script>
     <script type="text/javascript" src="js/angular-datepicker.js"></script>
     <script src="js/angular-cookies.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
     <script src="js/controllers.js"></script>
   </body>
 </html>
