--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,18 @@
     <!--script src="cordova.js"></script-->
     <!-- for flash messages -->
     <script src="flash/angular-flash.js"></script>
+    
+    <script src="js/moment.js"></script>
+    <script src="js/angular-moment.min.js"></script>
+    <script type="text/javascript" src="js/angular-datepicker.js"></script>
+    <script src="js/angular-cookies.js"></script>
+    <script src="cordova.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
+    <!--<script src="js/PushNotification.js"></script>-->
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    
     <link href="css/customized.css" rel="stylesheet">
     <link href="js/datepicker/dist/style.css" rel="stylesheet">
     <script src="js/datepicker/dist/templates.min.js"></script>
@@ -26,11 +36,5 @@
   </head>
   <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-    <script src="js/moment.js"></script>
-    <script src="js/angular-moment.min.js"></script>
-    <script type="text/javascript" src="js/angular-datepicker.js"></script>
-    <script src="js/angular-cookies.js"></script>
-    <script src="js/ng-cordova.min.js"></script>
-    <script src="js/controllers.js"></script>
   </body>
 </html>
